--- a/_posts/2015-01-22-powa_1_2_1.md
+++ b/_posts/2015-01-22-powa_1_2_1.md
@@ -16,11 +16,15 @@ We've also improved the UI in many ways : the graph should be easier to read on 
 
 This version is probably the major release of the 1.x branch. We're currently working on the branch that will change almost everything :  PoWA 2.x will be only compatible with PostgreSQL 9.4 because we want to use the new stats and features of latest version. This should allow PoWA 2.x to some nice things like finding missing indexes or displaying advanced filesysteme stats. The 2.x version will also have a brand new user interface and we hope this will be similar to what we did when we rewrote completely the pgBadger interface 2 years ago...
 
-Here's a some preview:
+Here's a quick preview:
 
 ![PoWA 2.x screenshot]({{ site.production_url }}/assets/img/2015-01-22_powa2_a.png)
 
+  
+
 ![PoWA 2.x screenshot]({{ site.production_url }}/assets/img/2015-01-22_powa2_b.png)
+
+  
 
 ![PoWA 2.x screenshot]({{ site.production_url }}/assets/img/2015-01-22_powa2_c.png)
 
