--- a/_posts/2016-02-19-db2topg.md
+++ b/_posts/2016-02-19-db2topg.md
@@ -43,4 +43,4 @@ Please read the [README](https://github.com/dalibo/db2topg) file for more detail
 
 Last year, Marc wrote a [SQL Server to PostgreSQL Migration kit](http://dalibo.github.io/sqlserver2pgsql/). Together with [Gilles Darold](http://dalibo.com/en/equipe#gilles) (author of [ora2pg](http://ora2pg.darold.net/) an Oracle/MySQL Migration tool), they're now on a personal quest to liberate the DBA of the world from proprietary databases :)
 
-As always this tool is free software. If you use it, please send us feedback and new ideas on the Github page : [https://github.com/dalibo/db2topg]()
+As always this tool is free software. If you use it, please send us feedback and new ideas on the Github page : [https://github.com/dalibo/db2topg](https://github.com/dalibo/db2topg)
